(test
  (name test_regexp)
  (modules test_regexp)
  (libraries ppx_regexp_lib ppxlib qcheck re re.perl))

; Tests for ppx_regexp

(tests
  (names test_ppx_regexp test_ppx_regexp_unused)
  (modules test_ppx_regexp test_ppx_regexp_unused test_ppx_regexp_module)
  (package ppx_mikmatch)
  (libraries ounit2 re re.perl)
  (preprocess (pps ppx_mikmatch)))

(executable
  (name main)
  (modules Main)
  (libraries ppx_mikmatch ocaml-migrate-parsetree))
